--- a/www/themes/nobleui/backend/layouts/default.htm
+++ b/www/themes/nobleui/backend/layouts/default.htm
@@ -7,6 +7,9 @@
     <?= $this->makeLayoutPartial('partials/head') ?>
 </head>
 <body>
+<!-- Flash Messages -->
+<div id="layout-flash-messages"><?= $this->makeLayoutPartial('flash_messages') ?></div>
+
 <div class="main-wrapper">
 
     <!-- partial:partials/_sidebar.html -->
