--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -38,7 +38,7 @@ use System\Models\Parameter;
 
     <script src="<?= Backend::skinAsset('assets/js/october.flyout.js') ?>"></script>
     <script src="<?= Backend::skinAsset('assets/js/october.tabformexpandcontrols.js') ?>"></script>
-
+    <script src="<?= Backend::skinAsset('assets/js/custom.js')?>"></script>
 
     <!-- core:css -->
     <link rel="stylesheet" href="<?=Backend::skinAsset("assets/vendors/core/core.css")?>">
