--- a/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
@@ -22,6 +22,9 @@ $navigations = $this->getNavigations();
         <span></span>
     </div>
 </div>
+<div class="sidebar-header">
+    <input id="nav-search-box" type="text" style="width: 100%;color: black;" placeholder="Search Navigation"/>
+</div>
 <div class="sidebar-body">
     <ul class="nav">
         <?php
