--- a/www/themes/nobleui/backend/layouts/partials/_foot.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_foot.htm
@@ -12,12 +12,13 @@ use System\Models\Parameter; ?>
 <!--<script src="--><? //= Backend::skinAsset('assets/vendors/bootstrap-datepicker/bootstrap-datepicker.min.js')?><!--"></script>-->
 <!--<script src="--><? //= Backend::skinAsset('assets/vendors/apexcharts/apexcharts.min.js')?><!--"></script>-->
 <!--<script src="--><? //= Backend::skinAsset('assets/vendors/progressbar.js/progressbar.min.js')?><!--"></script>-->
-<!--<!-- end plugin js for this page -->-->
-<!--<!-- inject:js -->-->
+<!-- end plugin js for this page -->
+<!-- inject:js -->
 <script src="<?= Backend::skinAsset('assets/vendors/feather-icons/feather.min.js') ?>"></script>
+<script src="<?= Backend::skinAsset('assets/vendors/loading-overlay/loadingoverlay.min.js') ?>"></script>
 <script src="<?= Backend::skinAsset('assets/js/template.js') ?>"></script>
-<!--<!-- endinject -->-->
-<!--<!-- custom js for this page -->-->
+<!-- endinject -->
+<!-- custom js for this page -->
 <!--<script src="--><? //= Backend::skinAsset('assets/js/dashboard.js')?><!--"></script>-->
 <!--<script src="--><? //= Backend::skinAsset('assets/js/datepicker.js')?><!--"></script>-->
 
