--- a/www/themes/nobleui/backend/layouts/default.htm
+++ b/www/themes/nobleui/backend/layouts/default.htm
@@ -31,7 +31,7 @@
 
         <!-- partial -->
 
-        <div class="page-content">
+        <div class="page-content" id="page-content">
 
             <?= $this->makeLayoutPartial('partials/body') ?>
 
