--- a/www/themes/nobleui/backend/layouts/partials/_foot.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_foot.htm
@@ -14,6 +14,7 @@ use System\Models\Parameter; ?>
 <!--<script src="--><? //= Backend::skinAsset('assets/vendors/progressbar.js/progressbar.min.js')?><!--"></script>-->
 <!-- end plugin js for this page -->
 <!-- inject:js -->
+<?php $this->addJs('js/october.list.js', 'core'); ?>
 <script src="<?= Backend::skinAsset('assets/vendors/feather-icons/feather.min.js') ?>"></script>
 <script src="<?= Backend::skinAsset('assets/vendors/loading-overlay/loadingoverlay.min.js') ?>"></script>
 <script src="<?= Backend::skinAsset('assets/js/template.js') ?>"></script>
