--- a/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_sidebar.htm
@@ -22,13 +22,12 @@ $navigations = $this->getNavigations();
         <span></span>
     </div>
 </div>
-
-<div class="sidebar-body">
-    <div class="sidebar-search">
-        <div class="input-group">
-            <input id="nav-search-box" type="text" class="form-control" id="navbarForm" placeholder="Search Navigation">
-        </div>
+<div class="sidebar-search">
+    <div class="input-group">
+        <input autocomplete="off" id="nav-search-box" type="text" class="form-control icon search growable" id="navbarForm" placeholder="Search Navigation">
     </div>
+</div>
+<div class="sidebar-body">
     <ul class="nav">
         <?php
         $counter = 0;
