--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -14,7 +14,10 @@ body {
     left: 0px;
     overflow: scroll;
 }
-
+.main-wrapper .page-wrapper{
+    width: calc(100% - 225px);
+    margin-left: 225px;
+}
 .main-wrapper .page-wrapper .page-content {
     flex-grow: 1;
     padding: 5px;
@@ -279,10 +282,16 @@ table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-da
 }
 
 /***navigation ***/
+.navbar{
+    width: calc(100% - 225px);
+    left: 225px;
+}
 .navbar, .sidebar {
     z-index: 10;
 }
-
+.sidebar {
+    width: 225px;
+}
 
 .nav .nav-item .nav-link .link-icon {
     font-size: 1.550rem;
@@ -297,8 +306,9 @@ table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-da
 }
 
 .sidebar-search {
-    padding: 7px 5px 0px 14px;
+    padding: 2px 10px 2px 14px;
     background-color: #3a3f51;
+    border-bottom: 1px solid #9e9fa247;
 }
 
 .sidebar .sidebar-body, .navbar, .navbar .search-form, input#navbarForm, input#nav-search-box {
