--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -52,13 +52,21 @@ use System\Models\Parameter;
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="<?=Backend::skinAsset("assets/css/demo_1/style.css")?>" >
-    <link rel="stylesheet" href="<?=Backend::skinAsset("assets/css/custom.css")?>" >
     <!-- End layout styles -->
     <link rel="shortcut icon" href="<?=Backend::skinAsset("assets/images/favicon.png")?>" />
 
+    <?php $this->addJs('/modules/backend/widgets/lists/assets/js/october.list.js', 'core'); ?>
+    <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
+    <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
+    <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
+    <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.filter.js') ?>
+    <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
+    <?php $this->addJs('/plugins/demo/core/formwidgets/querybuilderwidget/assets/js/query-builder.standalone.min.js') ?>
+    <?php $this->addJs('/plugins/demo/core/formwidgets/querybuilderwidget/assets/js/sql-parser.js') ?>
+    <?php $this->addCss('/plugins/demo/core/formwidgets/querybuilderwidget/assets/css/query-builder.default.min.css') ?>
 
     <?= $this->makeAssets() ?>
     <?= Block::placeholder('head') ?>
     <?= $this->makeLayoutPartial('custom_styles') ?>
-
+    <link rel="stylesheet" href="<?=Backend::skinAsset("assets/css/custom.css")?>" >
 </head>
