--- a/www/themes/nobleui/backend/layouts/partials/_head.htm
+++ b/www/themes/nobleui/backend/layouts/partials/_head.htm
@@ -57,6 +57,7 @@ use System\Models\Parameter;
 
     <?php $this->addJs('/modules/backend/widgets/lists/assets/js/october.list.js', 'core'); ?>
     <?php $this->addCss('/plugins/demo/core/controllers/baseenginecontroller/assets/css/engine.css') ?>
+    <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/libs/js/lodash.js') ?>
     <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.js') ?>
     <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.ui.js') ?>
     <?php $this->addJs('/plugins/demo/core/controllers/baseenginecontroller/assets/js/engine.filter.js') ?>
