--- a/www/themes/nobleui/backend/assets/css/custom.css
+++ b/www/themes/nobleui/backend/assets/css/custom.css
@@ -55,6 +55,11 @@ a {
     font-weight: 400;
     font-size: 1.375rem;
     padding: 2px 5px;
+    width: 100%;
+}
+
+.form-inline .form-control, .form-inline select, .form-inline .email-compose-fields .select2-container--default .select2-selection--multiple, .email-compose-fields .select2-container--default .form-inline .select2-selection--multiple, .form-inline .select2-container--default .select2-selection--single, .select2-container--default .form-inline .select2-selection--single, .form-inline .select2-container--default .select2-selection--single .select2-search__field, .select2-container--default .select2-selection--single .form-inline .select2-search__field, .form-inline .typeahead, .form-inline .tt-query, .form-inline .tt-hint {
+    width: 100%;
 }
 
 .form-control:disabled, select:disabled, .email-compose-fields .select2-container--default .select2-selection--multiple:disabled, .select2-container--default .select2-selection--single:disabled, .select2-container--default .select2-selection--single .select2-search__field:disabled, .typeahead:disabled, .tt-query:disabled, .tt-hint:disabled, .form-control[readonly], select[readonly], .email-compose-fields .select2-container--default .select2-selection--multiple[readonly], .select2-container--default .select2-selection--single[readonly], .select2-container--default .select2-selection--single .select2-search__field[readonly], .typeahead[readonly], .tt-query[readonly], .tt-hint[readonly] {
@@ -108,9 +113,9 @@ a {
 /*.select2-container--default .select2-selection--single, span.select2.select2-container {
     height: 100%;
 }*/
-
 .select2-container--default .select2-selection--single .select2-selection__rendered {
     line-height: 26px;
+    z-index: 10060;
 }
 
 .custom-checkbox input[type=checkbox]:indeterminate + label:before, .custom-radio input[type=checkbox]:indeterminate + label:before, .custom-checkbox input[type=checkbox]:checked + label:before, .custom-radio input[type=checkbox]:checked + label:before {
@@ -210,6 +215,11 @@ a {
 
 .table-wrapper {
     position: relative;
+}
+
+/**Filters*/
+.query-builder .rule-value-container {
+    width: 30%;
 }
 
 .control-filter {
@@ -507,6 +517,10 @@ table.table.data tbody tr.rowlink:hover td, table.table.data tbody tr:not(.no-da
 
 a.manage-widgets, .action a {
     color: #3a3f51;
+}
+
+span.select2-container {
+    z-index: 10050;
 }
 
 .btn-primary, .swal2-modal .swal2-actions button.swal2-confirm, .wizard > .actions a, .wizard > .actions a:hover,
